=====================================
2010-04-03T18:19:45.054855Z plg-1_304
=====================================

  2010-04-03 18:18:42 (r2859) by rcaputo
  polo-gtk/lib/POE/Loop/Gtk.pm M; polo-gtk/Makefile.PL M

    Fix PLG dependencies and bump revision for release.

  2010-03-24 06:52:46 (r2852) by apocal
  poe M; polo-gtk/Makefile.PL M; polo-tk M; polo-event M; poe-test-loops
  M; polo-gtk M

    Set svn:ignore for: META.yml CHANGES run_network_tests PoLo-Gtk
    forgot to clean run_network_tests 

  2010-03-06 23:55:53 (r2827) by apocal; polo-gtk/lib/POE/Loop/Gtk.pm M

    Add missing import line for Gtk.pm so the loop will load with
    POE_EVENT_LOOP env var 

  2009-09-07 19:33:27 (r2680) by rcaputo; polo-gtk/lib/POE/Loop/Gtk.pm M

    Bump version for next release.

  2009-09-04 07:05:48 (r2670) by rcaputo; polo-gtk/lib/POE/Loop/Gtk.pm M

    z_rt39872_sigchld_stop crashes Gdk, so skip it. Also, bypass
    Gtk->init_check() because it returns failure when Gtk is present and
    accounted for. [rt 28804] 

  2009-09-04 04:58:00 (r2669) by rcaputo; polo-gtk/lib/POE/Loop/Gtk.pm M

    Try (vainly) to elicit an error from Gtk when it fails to init. 

=====================================
2009-08-27T04:27:51.928843Z plg-1_302
=====================================

  2009-08-27 04:25:43 (r2651) by rcaputo
  polo-gtk/lib/POE/Loop/Gtk.pm M; polo-gtk/Makefile.PL M

    Add the info test we forgot to include.

=====================================
2009-08-26T15:36:33.809144Z plg-1_301
=====================================

  2009-08-26 15:32:01 (r2646) by rcaputo
  polo-gtk/lib/POE/Loop/Gtk.pm M; polo-gtk/Makefile.PL M

    Add POE::Test::Loops to configure_requires and build_requires.

=====================================
2009-08-26T02:34:39.613499Z plg-1_300
=====================================

  2009-08-26 02:30:48 (r2639) by rcaputo; polo-gtk/Makefile.PL M

    We use the generic svn-log.perl, not the one included in POE.
