@@ -1,15 +1,28 @@
 --- #YAML:1.0
-name:                POE-Loop-Gtk
-version:             1.304
-abstract:            Gtk event loop support for POE.
-license:             ~
-author:              
+name:               POE-Loop-Gtk
+version:            1.305
+abstract:           Gtk event loop support for POE.
+author:
     - Rocco Caputo <rcaputo@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Gtk:                           0.7009
-    POE:                           1.288
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+    POE::Test::Loops:     1.035
+build_requires:
+    ExtUtils::MakeMaker:  0
+    POE::Test::Loops:     1.035
+requires:
+    Gtk:  0.7009
+    POE:  1.289
+resources:
+    license:     http://dev.perl.org/licenses/
+    repository:  https://poe.svn.sourceforge.net/svnroot/poe/trunk/polo-gtk
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
